--- a/app/app/src/main/res/layout/fragment_walkthrough3.xml
+++ b/app/app/src/main/res/layout/fragment_walkthrough3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Walkthrough.Walkthrough1">
+    tools:context=".Walkthrough3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ණැනස - Walk-through 01"
+                android:text="D3 - Walk-through 03"
                 android:textColor="#E6E6E6"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -44,7 +44,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="This is a sample text for the walk-through screen 01.\nThis is a sample text for the walk-through screen 01. This is a sample text for the walk-through screen 01. \nThis is a sample text for the walk-through screen 01. This is a sample text for the walk-through screen 01. This is a sample text for the walk-through screen 01. \nThis is a sample text for the walkthrough screen 02. "
+                android:text="This is a sample text for the walk-through screen 03.\nThis is a sample text for the walk-through screen 03. This is a sample text for the walk-through screen 03. \nThis is a sample text for the walk-through screen 03. This is a sample text for the walk-through screen 03. This is a sample text for the walk-through screen 03. \nThis is a sample text for the walk-through screen 03. "
                 android:textAlignment="center"
                 android:textColor="#E3E3E3"
                 android:textSize="15sp"
@@ -61,11 +61,10 @@
             android:layout_weight="4">
 
             <Button
-                android:id="@+id/walkthrough1_btn"
+                android:id="@+id/walkthrough3_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Skip"
-                android:visibility="gone"
+                android:text="Go In"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,12 +74,12 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Swipe to see more &gt;&gt;"
+                android:text="&lt;&lt; Swipe to see the previous"
                 android:textColor="#D6D6D6"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/walkthrough1_btn" />
+                app:layout_constraintTop_toBottomOf="@+id/walkthrough3_btn" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
